# Factorio

./: CMakeLists.txt  build.sh  generator.sh
data/factorio-simulator/outputs/: cahllenge1-out.json  challenge-2-out.json  challenge-3-out.json  challenge-4-out.json  challenge-5-out.json  challenge-6-out.json  challenge-7-out.json
factorio-skelleton/: CMakeLists.txt
factorio-skelleton/apps/: CMakeLists.txt  factorio.cpp
factorio-skelleton/jsons/: example_1.json  example_2.json
src/: event.cpp  event.h  factory.cpp  factory.h  item.cpp  item.h  main.cpp  recipe.cpp  recipe.h  technology.cpp  technology.h
